# kanari-agent

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  ASSISTANT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  celery-kanari.service  config.example.yaml  mint.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  e2e.yml  publish.yml  tests.yml
.superpowers/sdd/: task-1-brief.md
docs/: Assistant.md  docs.json  introduction.mdx  quickstart.mdx
docs/commands/: agent.mdx  alerts.mdx  audit.mdx  doctor.mdx  init.mdx  login.mdx  watch.mdx
docs/guides/: cicd.mdx  deep-audit.mdx  latency-tracking.mdx
docs/reference/: configuration.mdx  findings.mdx  privacy.mdx
docs/superpowers/plans/: 2026-06-23-kanari-rename.md
docs/superpowers/specs/: 2026-06-23-kanari-rename-design.md
src/doorman_agent/: __init__.py  agent.py  api_client.py  audit.py  cli.py  collector.py  config.py  findings.py  logger.py  models.py  simulator.py  stamps.py
src/kanari_agent/: __init__.py  __main__.py  agent.py  api_client.py  audit.py  cli.py  collector.py  config.py  config_checks.py  doctor.py  findings.py  logger.py  login.py  models.py  stamps.py  worker_baseline.py
tests/: json_response_mock.json  test_agent.py  test_api_client.py  test_audit.py  test_cli.py  test_cli_billing.py  test_collector.py  test_config.py  test_doctor.py  test_findings.py  test_login.py  test_privacy.py  test_worker_baseline.py
tests/e2e/: celery_app.py  test_audit_e2e.py
