[tool.poetry]
name = "kanari"
version = "0.3.0"
description = "Privacy-first monitoring agent for Celery + Redis"
authors = ["Hernán Chilabert <hchilabert@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/getkanari/kanari-agent"
keywords = ["celery", "redis", "monitoring", "alerting", "observability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]
packages = [{include = "kanari_agent", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
redis = ">=4.0.0,<6.0.0"
celery = ">=5.2.0,<6.0.0"
pyyaml = ">=6.0"
pydantic = ">=2.0.0,<3.0.0"
rich = ">=13.0.0,<14.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-cov = ">=4.0"
ruff = ">=0.1.0"
mypy = ">=1.0"
types-pyyaml = ">=6.0"
types-redis = ">=4.0"
pre-commit = ">=3.0"
bandit = ">=1.7"
detect-secrets = ">=1.4"
git-cliff = "^2.13.1"

[tool.poetry.scripts]
kanari = "kanari_agent.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "UP045",  # X | None syntax — breaks Pydantic on Python 3.9; use Optional[X] instead
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = ["src"]
markers = ["e2e: requires real Redis and Celery worker (set E2E=true to enable)"]

[tool.bandit]
targets = ["src/kanari_agent"]
skips = ["B101"]
severity = "medium"
confidence = "medium"

[tool.coverage.run]
omit = []

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
